cmake_minimum_required(VERSION 3.21)
project(programmers)

set(CMAKE_CXX_STANDARD 14)

add_executable(programmers tuple.cpp 기능개발.cpp 두개이하로다른비트.cpp 최대값과최소값.cpp 단속카메라.cpp 섬연결하기.cpp 리틀프랜즈사천성.cpp 베스트엘범.cpp 이중우선순위큐.cpp 같은숫자는싫어.cpp H-Index.cpp 행렬태두리회전.cpp 피로도.cpp 소수찾기.cpp 최소값만들기.cpp 행렬의곱셈.cpp 단체사진찍기.cpp 더맵게.cpp n^2배열자르기.cpp 조이스틱.cpp 가장먼노드.cpp 뉴스클러스터링.cpp 위장.cpp 이진변환반복하기.cpp 스킬트리.cpp 메뉴리뉴얼.cpp 구명보트.cpp 올바른괄호.cpp "JadenCase_문자열만들기.cpp" 줄서는방법.cpp 다음큰숫자.cpp 피보나치수.cpp 성격유형검사하기.cpp 나누어떨어지는숫자배열.cpp 캐시.cpp 합승택시요금.cpp)
